--- a/afw.html
+++ b/afw.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesafw.css">
 
 
-  <title>fG</title>
+  <title>fG-Fashion</title>
   <link rel="icon" href="logop.jpg" type="image/x-icon">
   
 
